syntax = "proto3";
option go_package = "./";

message Req {// 第一层
  int32    identifier = 1;
  string   operation = 2;
  string   msgId = 3;
  Person person = 9;
  oneof data {
    SendMsgReq sendMsgReq = 4;
    PullMsgBySeqListReq pullMsgBySeqListReq = 5;
    GetMsgMaxAndMinSeqReq maxAndMinSeqReq = 6;
  }
}

message SendMsgReq {
  string event = 1;
  bytes data = 2;
  TopicType topic = 3;
}


message Person{
  string  name = 1;
  int32 age = 2;
}



//@send recruit.query.pool
message RecruitQueryPoolReq {
  int32 id = 1; // 招募卡池id
}



message PullMsgBySeqListReq{

}

message GetMsgMaxAndMinSeqReq{

}

enum TopicType //枚举 消息类型
{
  NONE = 0;    // proto3版本中，首成员必须为0，成员不应有相同的值
  EVENT = 1;   // 事件处理
  PUSH = 2;    // 推送
}
